--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   firebase_core: ^1.19.2
   firebase_auth: ^3.4.2
   firebase_analytics: ^9.2.0
+  flutter_osm_plugin: ^0.37.2+1
+  location: ^4.4.0
 
 dev_dependencies:
   flutter_test:
